fixed z-index bug

--- a/client/src/Components/App/App.css
+++ b/client/src/Components/App/App.css
@@ -34,7 +34,10 @@ p {
 }
 a {
   text-decoration: none;
-  z-index: 2000000000 !important;
+  z-index: 3000000000 !important;
+}
+button {
+  z-index: 3000000000 !important;
 }
 .no-select {
   user-select: none;
@@ -72,6 +75,9 @@ body::-webkit-scrollbar {
 /* OTHER STYLES =========================================================================================================== */
 .snippet {
   font-size: 20px;
+}
+.toup {
+  z-index: 9999999989 !important;
 }
 /* RESPONSIVE STYLES =========================================================================================================== */
 
